Fix padding on small screens

--- a/assets/stylesheets/modules/_buttons.scss
+++ b/assets/stylesheets/modules/_buttons.scss
@@ -61,6 +61,15 @@
     }
 }
 
+/* Button Group
+   ========================================================================== */
+
+.button-group {
+    .button {
+        margin-bottom: $gs-baseline;
+    }
+}
+
 /* Toggle
    ========================================================================== */
 
